--- a/Ex5- Quizz/app/src/main/AndroidManifest.xml
+++ b/Ex5- Quizz/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:screenOrientation="landscape"
+            android:screenOrientation="portrait"
             >
 
             <intent-filter>
